force-app/main/default/objects/Case/fields/NumApprovedEthyopianPopulation__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedEthyopianPopulation__c</fullName>
    <label>Num Approved Ethyopian Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>