force-app/main/default/objects/Case/fields/NumApprovedFromArabPopulation__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedFromArabPopulation__c</fullName>
    <label>Num Approved From Arab Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>