force-app/main/default/objects/Case/fields/NumApprovedFromHarediPopulation__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedFromHarediPopulation__c</fullName>
    <label>Num Approved From Haredi Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>