force-app/main/default/objects/Case/fields/NumApprovedSingleParents__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedSingleParents__c</fullName>
    <label>Num Approved Single Parents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>