force-app/main/default/objects/Case/fields/NumApprovedSocialyTreated__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedSocialyTreated__c</fullName>
    <label>Num Approved Socialy Treated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>