force-app/main/default/objects/Case/fields/NumApprovedTeenagersAtRisk__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedTeenagersAtRisk__c</fullName>
    <label>Num Approved Teenagers at Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>