force-app/main/default/objects/Case/fields/NumApprovedYotzimBeShela__c.field-meta.xml
<CustomField>
    <fullName>NumApprovedYotzimBeShela__c</fullName>
    <label>Num Approved Yotzim BeShela</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>