force-app/main/default/objects/Case/fields/NumberAccepted__c.field-meta.xml
<CustomField>
    <fullName>NumberAccepted__c</fullName>
    <description>מס&apos; העובדים שנקלטו להכשרה</description>
    <label>Number Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>