force-app/main/default/objects/Case/fields/NumberApproved__c.field-meta.xml
<CustomField>
    <fullName>NumberApproved__c</fullName>
    <description>מס&apos; העובדים שאושרו</description>
    <label>Number Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>