force-app/main/default/objects/Case/fields/NumberRequested__c.field-meta.xml
<CustomField>
    <fullName>NumberRequested__c</fullName>
    <description>מס&apos; עובדים שהוגשו</description>
    <label>Number Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>