force-app/main/default/objects/Case/fields/SumPaidFirstStage__c.field-meta.xml
<CustomField>
    <fullName>SumPaidFirstStage__c</fullName>
    <description>גובה המענק ששולם בפעימה הראשונה</description>
    <label>Sum Paid First Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>