force-app/main/default/objects/Case/fields/SumPaidSecondStage__c.field-meta.xml
<CustomField>
    <fullName>SumPaidSecondStage__c</fullName>
    <description>גובה המענק ששולם בפעימה השניה</description>
    <label>Sum Paid Second Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>