force-app/main/default/objects/Case/fields/TotalSumApproved__c.field-meta.xml
<CustomField>
    <fullName>TotalSumApproved__c</fullName>
    <description>סכום המענק שאושר</description>
    <label>Total Sum Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>