force-app/main/default/objects/Case/fields/TotalSumUsed__c.field-meta.xml
<CustomField>
    <fullName>TotalSumUsed__c</fullName>
    <description>סכום שנוצל עד כה מתוך המענק</description>
    <label>Total Sum Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>