force-app/main/default/objects/Case/fields/TrainingDenialReason__c.field-meta.xml
<CustomField>
    <fullName>TrainingDenialReason__c</fullName>
    <label>Training Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>